--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
     "lite": "lite-server",
-    "postinstall": "npm install typings",
+    "postinstall": "npm install concurrently && npm install typings",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "typings": "typings"
