--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
     "lite": "lite-server",
-    "postinstall": "npm install concurrently && npm install typings",
+    "postinstall": "npm install typings",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "typings": "typings"
@@ -26,7 +26,11 @@
     "systemjs": "0.19.27",
     "zone.js": "^0.6.23",
     "angular2-in-memory-web-api": "0.0.20",
-    "bootstrap": "^3.3.6"
+	"bootstrap": "^3.3.7",
+    "concurrently": "^2.2.0",
+    "lite-server": "^2.2.2",
+    "typescript": "^2.0.2",
+    "typings": "^1.3.2"
   },
   "devDependencies": {
     "bootstrap": "^3.3.7",
