--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.4.1",
     "jquery": "^3.1.1",
     "lite-server": "^2.2.2",
+    "ng2-select": "^1.1.2",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.27",
