--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "3.0.0",
     "@angular/upgrade": "2.0.0",
     "angular2-in-memory-web-api": "0.0.20",
+    "angular2-select": "^1.0.0-beta.2",
     "bootstrap": "^3.3.7",
     "concurrently": "^2.2.0",
     "core-js": "^2.4.1",
