--- a/package.json
+++ b/package.json
@@ -11,29 +11,32 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/router": "3.0.0",
-    "@angular/upgrade": "2.0.0",
-    "angular2-in-memory-web-api": "0.0.20",
+    "@angular/common": "2.4.8",
+    "@angular/compiler": "2.4.8",
+    "@angular/compiler-cli": "2.4.8",
+    "@angular/core": "2.4.8",
+    "@angular/forms": "2.4.8",
+    "@angular/http": "2.4.8",
+    "@angular/platform-browser": "2.4.8",
+    "@angular/platform-browser-dynamic": "2.4.8",
+    "@angular/platform-server": "2.4.8",
+    "@angular/router": "^3.0.0",
+    "@angular/upgrade": "2.4.8",
     "angular2-select": "^1.0.0-beta.2",
     "bootstrap": "^3.3.7",
     "concurrently": "^2.2.0",
     "core-js": "^2.4.1",
     "jquery": "^3.1.1",
     "lite-server": "^2.2.2",
+    "moment": "^2.17.1",
     "ng2-select": "^1.1.2",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^5.0.1",
     "systemjs": "0.19.27",
+    "traceur": "0.0.111",
     "typescript": "^2.0.2",
     "typings": "^1.3.2",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
     "bootstrap": "^3.3.7",
