--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-server": "2.4.8",
     "@angular/router": "^3.0.0",
     "@angular/upgrade": "2.4.8",
+    "angular2-infinite-scroll": "^0.3.1",
     "angular2-select": "^1.0.0-beta.2",
     "bootstrap": "^3.3.7",
     "concurrently": "^2.2.0",
