--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.2.0",
+    "json-loader": "^0.5.4",
     "lite-server": "^2.2.2",
     "moment": "^2.17.1",
     "ng2-select": "^1.1.2",
