--- a/package.json
+++ b/package.json
@@ -63,13 +63,13 @@
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2",
     "webpack-merge": "^4.0.0",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.7.2",
+    "lite-server": "^2.2.2",
   },
   "devDependencies": {
-    "bootstrap": "^3.3.7",
-    "concurrently": "^2.2.0",
-    "lite-server": "^2.2.2",
-    "typescript": "^2.0.2",
-    "typings": "^1.3.2"
+
+  },
+  "engines": {
+    "node": "5.12.0"
   }
 }
