--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "webpack-dev-server": "^2.4.2",
     "webpack-merge": "^4.0.0",
     "zone.js": "^0.7.2",
-    "lite-server": "^2.2.2",
+    "lite-server": "^2.2.2"
   },
   "devDependencies": {
 
