Fixing deployment via configuration file

--- a/src/app.config.json
+++ b/src/app.config.json
@@ -1,3 +1,3 @@
 {
-    "apiUrl": "https://glacial-hollows-97055.herokuapp.com/api/"
+    "apiUrl": "https://salty-atoll-18148.herokuapp.com/api/"
 }
