--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angular2-quickstart",
   "version": "1.0.0",
   "scripts": {
-    "start": "node server.js",
+    "start": "npm run build && node server.js",
     "postinstall": "npm install typings",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
@@ -28,6 +28,7 @@
     "@types/hammerjs": "^2.0.34",
     "@types/node": "^7.0.8",
     "@types/webpack": "^2.2.11",
+    "angular2-cookie": "^1.2.6",
     "angular2-infinite-scroll": "^0.3.1",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.1.2",
@@ -43,6 +44,7 @@
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.2.0",
     "json-loader": "^0.5.4",
+    "lite-server": "^2.2.2",
     "moment": "^2.17.1",
     "ngc-webpack": "^1.2.0",
     "optimize-js-plugin": "0.0.4",
@@ -61,12 +63,9 @@
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2",
     "webpack-merge": "^4.0.0",
-    "zone.js": "^0.7.2",
-    "lite-server": "^2.2.2"
+    "zone.js": "^0.7.2"
   },
-  "devDependencies": {
-
-  },
+  "devDependencies": {},
   "engines": {
     "node": "5.12.0"
   }
